--- a/style.css
+++ b/style.css
@@ -12,6 +12,11 @@ body {
     grid-template-columns: repeat(12, 1fr);
     grid-template-rows: repeat(12, 1fr);
 }
+header {
+    display:flex;
+    grid-column: 1/-1;
+    justify-content: space-between;
+}
 nav {
     padding: 0.5rem;
     background-color: #dcdc39;
@@ -20,6 +25,7 @@ nav {
     font-size: 2rem;
     grid-column: 1/-1;
 }
+
 
 nav, .nav, .menu {
     display: flex;
