--- a/style.css
+++ b/style.css
@@ -5,25 +5,34 @@
     font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
+/* VARIABLES DE COLORES  */
+:root {
+    --primer-color:#eac195;
+    --segundo-color:#b49b85;
+    --tercer-color:#536d88;
+    --cuarto-color:#19274e;
+    --quinto-color:#0f132e;
+}
+
 /* HEADER */
 header {
     height: 100px;
-    background: #0074A2;
+    background: var(--quinto-color);
     padding: 0 50px;
-    color: #EFECCA;
+    color: var(--primer-color);
     display: flex;
     justify-content: space-between;
     align-items: center;
 }
 .logo {
     text-transform: uppercase;
-    color: #001F3F;
+    color: var(--primer-color);
     text-decoration: none;
     padding: 0 10px;
     transition: 0.4s;
 }
 .menu a {
-    color: #CCCCCC;
+    color: var(--primer-color);
     text-transform: uppercase;
     text-decoration: none;
     padding: 0 10px;
@@ -43,10 +52,10 @@ header {
 }
 .menu a:hover,
 .esconder-menu:hover {
-    color: #001F3F;
+    color: var(--quinto-color);
 }
 .mostrar-menu:hover {
-    color:#001F3F;
+    color:var(--quinto-color);
 }
 #check {
     display: none;
@@ -54,14 +63,14 @@ header {
 /* BANNER */
 #banner {
     padding: 0 50px;
-    background-image: url(./img/banner.jpg);
+    background-image: url(./img/acabados1.svg);
     height: 45vh;
     background-size: cover;
     background-position: center;
 }
 #banner::before{
     content: "";
-    background: rgba(75, 31, 117, 0.377);
+    background: rgba(75, 31, 117, 0.3);
     position: absolute;
     width: 100%;
     height: 45vh;
@@ -69,7 +78,8 @@ header {
 }
 .contenido-banner {
     position: relative;
-    color: #EFECCA;
+    color: var(--primer-color);
+    text-shadow: 1px 1px 1px var(--quinto-color);
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -87,16 +97,19 @@ header {
 
 .boton-empezar {
     text-decoration: none;
-    background: #0074A2;
-    color: #EFECCA;
-    border: 1px solid #0074A2;
+    background: var(--cuarto-color);
+    color: var(--segundo-color);
+    border: 1px solid var(--tercer-color);
     padding: 20px 40px;
     align-self: baseline;
     transition: all 0.4s;
     border-radius: 10px;
+    font-weight: bold;
 }
 .boton-empezar:hover {
-    background: #001F3F;
+    background: var(--primer-color);
+    color: var(--quinto-color);
+    font-weight: bold;
 }
 /* PERSONAS */
 .instalador {
@@ -197,7 +210,7 @@ header {
         position: fixed;
         width: 80%;
         height: 100vh;
-        background: #0074A2;
+        background: var(--tercer-color);
         right: -100%;
         top: 0;
         text-align: center;
