--- a/style.css
+++ b/style.css
@@ -70,7 +70,7 @@ header {
 }
 #banner::before{
     content: "";
-    background: rgba(75, 31, 117, 0.3);
+    background: rgba(75, 31, 117, 0.5);
     position: absolute;
     width: 100%;
     height: 45vh;
@@ -79,7 +79,7 @@ header {
 .contenido-banner {
     position: relative;
     color: var(--primer-color);
-    text-shadow: 1px 1px 1px var(--quinto-color);
+    
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -88,11 +88,13 @@ header {
 .contenido-banner h3 {
     font-size: 30px;
     font-weight: 400;
-    padding: 10px 0px;
+    padding: 50px 0px;
+    text-shadow: -1px 1px 1px var(--cuarto-color);
 
 }
 .contenido-banner h3 span {
     font-weight: 600;
+    text-shadow: -1px 1px 1px var(--cuarto-color);
 }
 
 .boton-empezar {
@@ -109,7 +111,6 @@ header {
 .boton-empezar:hover {
     background: var(--primer-color);
     color: var(--quinto-color);
-    font-weight: bold;
 }
 /* PERSONAS */
 .instalador {
@@ -130,21 +131,21 @@ header {
     padding: 30px 30px;
 }
 #personas div h4 {
-    color: #001F3F;
+    color: var(--quinto-color);
     font-size: 20px;
     margin: 15px 0px;
 
 }
 #personas div p {
-    color:#001f3f99;
+    color:var(--tercer-color);
     font-size: 18px;
 }
 .boton-saber-mas {
     display: inline-block;
     text-decoration: none;
-    color: #0074A2;
+    color: var(--cuarto-color);
     padding: 10px 30px;
-    border: 3px solid #0074A2;
+    border: 3px solid var(--quinto-color);
     border-radius: 30px;
     margin-top: 15px;
     transition: all 0.4s;
@@ -152,14 +153,14 @@ header {
 
 }
 .boton-saber-mas:hover {
-    background: #001F3F;
-    color: #EFECCA;
+    background: var(--cuarto-color);
+    color: var(--primer-color);
 }
 
 /* ICONOS */
 #iconos {
     padding: 0px 50px;
-    background: #0074A2;
+    background: var(--segundo-color);
 }
 .contenido-iconos {
     padding: 50px 50px 0 50px;
