--- a/style.css
+++ b/style.css
@@ -99,8 +99,8 @@ header {
 
 .boton-empezar {
     text-decoration: none;
-    background: var(--cuarto-color);
-    color: var(--segundo-color);
+    background: var(--primer-color);
+    color: var(--cuarto-color);
     border: 1px solid var(--tercer-color);
     padding: 20px 40px;
     align-self: baseline;
@@ -184,12 +184,13 @@ header {
     font-size: 20px;
     font-weight: 100;
     margin: 10px 0px;
+    font-weight:bold;
 
 }
 .contenido-iconos div p {
     color: #001F3F;
     font-size: 15px;
-    font-weight:bolder;
+    
 }
 
 
