--- a/style.css
+++ b/style.css
@@ -34,6 +34,7 @@ h1 {
     margin-right: 5px; 
     background: white;
     margin-left: 60px;
+    esta es una prueba para ver si funciona
 }
 
 .lupa {
