--- a/style.css
+++ b/style.css
@@ -414,6 +414,7 @@ footer {
     .menu form {
         display: block;
         padding: 20px;
+        margin-bottom: 30px;
     }
     .esconder-menu {
         position: absolute;
