--- a/style.css
+++ b/style.css
@@ -16,6 +16,7 @@ h1 {
     --tercer-color:#536d88;
     --cuarto-color:#19274e;
     --quinto-color:#0f132e;
+    --main-color:#086cb4;
 }
 
 /* ESTILOS BUSCADOR */
